TO BE SQUASHED, fix heartbeat and css

--- a/web-app/src/app/app.component.css
+++ b/web-app/src/app/app.component.css
@@ -67,14 +67,19 @@ and (max-width: 992px){
     margin-right:5em;
   }
 }
+
+@media only screen
+and (min-width: 992px)
+and (max-width: 1200px){
+  app-timestamp {
+    display: none;
+  }
+}
 @media only screen
 and (min-width: 992px)
 and (max-width: 1100px){
   .tabs{
     margin-right: 3em;
-  }
-  app-timestamp {
-    display: none;
   }
 }
 @media only screen
@@ -82,8 +87,5 @@ and (min-width: 1100px)
 and (max-width: 1200px){
   .tabs{
     margin-right: 2em;
-  }
-  app-timestamp {
-    display: none;
   }
 }
